# petropt

./: .gitignore  ENTERPRISE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: decline_analysis.ipynb  student_intro.ipynb
petropt/: __init__.py  economics.py
petropt/correlations/: __init__.py  decline.py  gas_pvt.py  hydraulics.py  ipr.py  ipr_extended.py  matbal.py  multiphase.py  pvt.py  relperm.py  volumetrics.py  water_pvt.py
petropt/datasets/: __init__.py  loaders.py
petropt/datasets/samples/: sample_production.csv
petropt/drilling/: __init__.py  _validation.py  hydraulics.py  tubulars.py  wellcontrol.py
petropt/io/: __init__.py  csv.py  las.py
petropt/petrophysics/: __init__.py  _validation.py  pay.py  permeability.py  porosity.py  saturation.py  vshale.py
petropt/production/: __init__.py  _validation.py  choke.py  erosion.py  hydrates.py  liquid_loading.py
petropt/qc/: __init__.py
petropt/rta/: __init__.py  fmb.py  linear_flow.py  transforms.py  type_curves.py
tests/: test_datasets.py  test_decline.py  test_drilling.py  test_economics.py  test_gas_pvt.py  test_hydraulics.py  test_io.py  test_ipr.py  test_ipr_extended.py  test_matbal.py  test_multiphase.py  test_petrophysics.py  test_production.py  test_pvt.py  test_relperm.py  test_rta.py  test_volumetrics.py  test_water_pvt.py
