[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petropt"
version = "0.3.2"
description = "Open-source Python library for petroleum & reservoir engineering — PVT, IPR, decline, multiphase flow, material balance, petrophysics (Archie/Simandoux/Timur), rate transient analysis (Blasingame / Agarwal-Gardner / NPI), drilling (API 5C3 collapse, Barlow burst), production (Turner/Coleman/Katz/Gilbert), economics, well log I/O. MIT licensed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Groundwork Analytics LLC", email = "info@petropt.com" },
    { name = "Mehrdad G. Shirangi" },
]
keywords = [
    "petroleum-engineering", "reservoir-engineering", "oil-gas",
    "decline-curve", "Arps", "PVT", "Standing", "Vogel", "IPR",
    "well-logs", "LAS", "production-data", "Z-factor", "Beggs-Brill",
    "material-balance", "relative-permeability", "open-source",
    "Fetkovich", "Darcy-Weisbach", "STOIIP", "economics", "NPV",
    "petrophysics", "Archie", "Simandoux", "Indonesian", "Timur",
    "Coates", "Vshale", "Larionov", "net-pay", "RTA",
    "Blasingame", "Agarwal-Gardner", "NPI", "flowing-material-balance",
    "linear-flow", "drilling", "API-5C3", "Barlow", "ECD",
    "kill-mud", "MAASP", "collapse-pressure", "burst-pressure",
    "production", "Turner", "Coleman", "Katz", "Gilbert",
    "Hammerschmidt", "hydrate", "erosional-velocity", "API-RP-14E",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "lasio>=0.31",
    "pandas>=2.0",
]

[project.optional-dependencies]
dlis = ["dlisio>=0.3"]
notebooks = ["jupyter", "matplotlib"]
all = ["dlisio>=0.3", "jupyter", "matplotlib"]

[project.urls]
Homepage = "https://petropt.com"
Repository = "https://github.com/petropt/petropt"
Documentation = "https://tools.petropt.com/docs/"
"Platform (free signup)" = "https://app.petropt.com"
"Online Tools" = "https://tools.petropt.com"
Issues = "https://github.com/petropt/petropt/issues"

[tool.hatch.build.targets.wheel]
packages = ["petropt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
